# django-ubiquitous-contactform

./: AUTHORS.rst  CHANGES.rst  LICENSE.txt  README.rst  TODO.rst  pyproject.toml  setup.py
myenquiries/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  settings.py  tests.py  urls.py  utils.py  validators.py  views.py
myenquiries/templates/myenquiries/emails/html/: myenquiry.html
myenquiries/templates/myenquiries/emails/text/: myenquiry.txt
ubiquitous_contactform/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  settings.py  tests.py  urls.py  utils.py  validators.py  views.py
ubiquitous_contactform/migrations/: 0001_initial.py  0002_enquiry_ip_address.py  0003_alter_enquiry_user_agent.py
ubiquitous_contactform/templates/myenquiries/: contact.html
ubiquitous_contactform/templates/myenquiries/emails/html/: myenquiry.html
ubiquitous_contactform/templates/ubiquitous_contact/emails/text/: myenquiry.txt
ubiquitous_contactform/templates/ubiquitous_contactform/emails/html/: myenquiry.html  receipt.html
ubiquitous_contactform/templates/ubiquitous_contactform/emails/text/: myenquiry.txt  receipt.txt
