[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "django-ubiquitous-contactform"
version = "0.9.0"
description = "Ubiquitous contact form for django sites"
classifiers = [ 
        "Development Status :: 4 - Beta", 
        "Environment :: Web Environment", 
        "Intended Audience :: Developers", 
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.6",
        "Framework :: Django 3.2+"
    ]

[[project.authors]]
name = "Steve Bradshaw"
email = "steve@pcfive.co.uk"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/st8st8/django-ubiquitous_contactform/"

[tool.setuptools]
packages = [ "ubiquitous_contactform", "ubiquitous_contactform.migrations",]
zip-safe = false
include-package-data = false

[tool.setuptools.package-data]
ubiquitous_contactform = [ 
        "templates/ubiquitous_contactform/emails/html/*", 
        "templates/ubiquitous_contactform/emails/text/*", 
        "templates/ubiquitous_contactform/*.html"
    ]
